# CompilationPrinciple

./: .gitignore  CMakeLists.txt  README.md  bak.code  main.cpp
E1/: E1.cpp  E1.h  E3.code  E3.lex
E2/: E2.cpp
E3/: E3.cpp  E3.h  E3.ir  E3.lex  Simulator.cpp  Simulator.h
Summary/: E.code  E.ir  E.lex
old/: FF1.cpp  FF1Pre.cpp  SemanticMeaning.cpp  exp2.code  exp2.cpp  exp2pro.cpp  ff-lex.txt  lex.txt  main.cpp  midcode.c  own.cpp  own2.cpp  own3.cpp  own4.cpp  syntax.cpp  syntax.h  test.code  text.cpp
